--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Desk</title>
+    <title>Task | Desk</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
